test/pass/api/string_split_no_match.lly
if "123".split(" ") != ["123"]:
    stderr.write("Failed.\n")
