test/fail/exceptions/traceback_line.lly
#[
Exception: Test

Traceback:
    from traceback_line.lly:8: in __main__
]#

raise Exception("Test\n")
